add class names to buttons and basic math functions

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
             <button type="button" class="operator">+</button>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
