--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button type="button" class="operator">-</button>
             <button type="button" class="operand">0</button>
             <button type="button" class="clear">C</button>
-            <button type="button" class="operator">=</button>
+            <button type="button" class="equal">=</button>
             <button type="button" class="operator">+</button>
         </div>
     </div>
